# autorel

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  release.toml  release.yml
.github/workflows/: build.yml  release.yml
changelog/: Cargo.toml
changelog/src/: changelog.rs  conventional_commit.pest  conventional_commit_parser.rs  git.rs  lib.rs  markdown.rs
changelog/tests/: change_type_spec.rs  changelog_spec.rs  commit_parser_spec.rs  markdown_spec.rs
cli/: Cargo.toml
cli/src/: lib.rs
core/: Cargo.toml
core/src/: changelog.rs  conventional_commit.pest  conventional_commit_parser.rs  lib.rs
core/tests/: change_type_spec.rs  changelog_spec.rs  commit_parser_spec.rs
docs/: config-ref.md
src/: action.rs  bump.rs  changelog.rs  cli.rs  cmd.rs  config.rs  cvs.rs  error.rs  git.rs  github.rs  main.rs  release.rs  scope.rs
