[workspace]
members = ["changelog"]

[package]
name = "autorel"
version = "0.0.0"
authors = ["Jonathan Cornaz"]
edition = "2018"

[profile.release]
lto = true
panic = 'abort'
codegen-units = 1

[dependencies]
autorel_chlg = { path = "changelog" }
clap = "3.0.0-beta.2"
semver = "0.11"
serde = "1"
serde_derive = "1"
serde_yaml = "0.8"
reqwest = { version = "0.11", features = ["blocking", "gzip", "brotli", "json"] }
regex = "1"
lazy_static = "1"
chrono = "0.4"

[dev-dependencies]
rstest = "0.9"
