[workspace]
members = ["changelog"]

[package]
name = "autorel"
version = "0.1.5" # <- version
license = "Unlicense OR MIT"
authors = ["Jonathan Cornaz"]
edition = "2018"

[profile.release]
opt-level = "z"
lto = true
panic = 'abort'
codegen-units = 1

[dependencies]
autorel_chlg = { path = "changelog" }
clap = "3.0.0-beta.2"
semver = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8.17"
reqwest = { version = "0.11.4", features = ["blocking", "gzip", "brotli", "json"] }
regex = "1.5"
lazy_static = "1.4"
chrono = "0.4.19"
git2 = "0.13.20"
url = "2.2"

[dev-dependencies]
rstest = "0.10.0"
